[project]
name = "sheet-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
lint = [
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
